syntax = "proto3";

option go_package = "github.com/vsespontanno/gochat-grpc/internal/proto";

service PingPonger {
    rpc PingPong(PingRequest) returns (PongResponse);
}

message PingRequest {
    string msg = 1;
}

message PongResponse {
    string msg = 1;
}